<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.wetmarket.staff.Comman.SlidingLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.wetmarket.staff.Activity.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/playfairdisplay_bold"
                    android:gravity="center"
                    android:text="@string/staff_login"
                    android:textColor="@color/dark_black_color"
                    android:textSize="@dimen/_20sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/enter_your_credential"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/gray_font_color"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/ic_login_header" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_25sdp">

                    <EditText
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:background="@drawable/drawable_edittext"
                        style="@style/EditText_style"
                        />

                    <EditText
                        android:layout_marginTop="@dimen/_15sdp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_15sdp"
                        android:paddingEnd="@dimen/_15sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:background="@drawable/drawable_edittext"
                        style="@style/EditText_style" />



                </LinearLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/login"
                    android:background="@drawable/drawable_button"
                    style="@style/Button_style" />


            </LinearLayout>


        </ScrollView>

    </com.wetmarket.staff.Comman.SlidingLinearLayout>
</layout>