<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_3sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_25sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:src="@drawable/ic_verified"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/playfairdisplay_bold"
            android:gravity="center"
            android:textColor="@color/dark_black_color"
            android:text="@string/items_handover"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/playfairdisplay_bold"
            android:gravity="center"
            android:textColor="@color/dark_black_color"
            android:text="@string/successfully"
            android:textSize="@dimen/_18sdp" />


        <Button
            android:id="@+id/btnOk"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/ok"
            android:background="@drawable/drawable_button"
            style="@style/Button_style" />




    </LinearLayout>
</androidx.cardview.widget.CardView>