<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wetmarket.staff.Activity.EditProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                />



        </LinearLayout>


        <com.wetmarket.staff.Comman.SlidingLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_margin="@dimen/_15sdp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_toEndOf="@+id/ivProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivProfile"
                            android:layout_centerVertical="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_user_placeholder_new"
                            android:layout_width="@dimen/_65sdp"
                            android:layout_height="@dimen/_65sdp"/>


                        <TextView
                            android:id="@+id/tvStaffName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Andrew scoth"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:textSize="@dimen/_13sdp"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/dark_black_color"/>


                    </LinearLayout>


                    <View
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/gray_color"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                    <LinearLayout

                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <RelativeLayout
                            android:id="@+id/rlEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/ivProfileIcon"
                                android:layout_centerVertical="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_user_black"
                                android:layout_width="@dimen/_14sdp"
                                android:layout_height="@dimen/_14sdp"/>


                            <TextView
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_toEndOf="@+id/ivProfileIcon"
                                android:id="@+id/tvEditProfile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/personal_detail"
                                android:textSize="@dimen/_13sdp"
                                android:layout_centerVertical="true"
                                android:gravity="center"
                                android:fontFamily="@font/poppins_medium"
                                android:textColor="@color/dark_black_color"/>

                            <ImageView
                                android:id="@+id/ivEdit"
                                android:layout_toStartOf="@+id/tvEdit"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_edit_pen"
                                android:layout_width="@dimen/_14sdp"
                                android:scaleType="fitXY"
                                android:layout_gravity="end"
                                android:layout_height="@dimen/_14sdp"/>

                            <TextView
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_alignParentEnd="true"
                                android:id="@+id/tvEdit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit"
                                android:textSize="@dimen/_14sdp"
                                android:layout_centerVertical="true"
                                android:fontFamily="@font/poppins_regular"
                                android:textStyle="bold"
                                android:gravity="center_vertical"
                                android:textColor="@color/skip_clr"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/name"
                            style="@style/Textview_gray_style"/>

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="@dimen/_13sdp"
                            android:textColor="@color/gray_text_color"
                            android:text="Dolpha Cronin"/>

                        <TextView
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/email"
                            android:textColor="@color/gray_font_color"
                            style="@style/Textview_gray_style"/>

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="@dimen/_13sdp"
                            android:textColor="@color/gray_text_color"
                            android:text="delphacronin@gmail.com"/>

                        <TextView
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/mobile_number"
                            android:textColor="@color/gray_font_color"
                            style="@style/Textview_gray_style"/>

                        <TextView
                            android:id="@+id/tvMobile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_13sdp"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/gray_text_color"
                            android:text="+65 98763574"/>
                    </LinearLayout>

                </LinearLayout>



            </ScrollView>

        </com.wetmarket.staff.Comman.SlidingLinearLayout>



    </LinearLayout>
</layout>